Bien attaqué la section imitation non ARI

--- a/Manuscrit/Biblio.bib
+++ b/Manuscrit/Biblio.bib
@@ -1,3 +1,15 @@
+@article{safavian1991survey,
+  title={A survey of decision tree classifier methodology},
+  author={Safavian, S Rasoul and Landgrebe, David},
+  journal={Systems, Man and Cybernetics, IEEE Transactions on},
+  volume={21},
+  number={3},
+  pages={660--674},
+  year={1991},
+  publisher={IEEE}
+}
+
+
 @conference{russell1998learning,
 	Annote = {Cit{\'e} de \cite{ng2000algorithms} :
 	"The IRL problem can be characterized informally as follows."},
